# twitter_video

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  trivy.yaml  twitdl_bin.py  twitter_video_downloader.ipynb  twitter_video_downloader.py
.github/workflows/: ci.yml  codeql-analysis.yml
Formula/: twitdl.rb
deprecated/: twitter_video_downloader.py
docs/: RUST_TRANSITION.md
docs/solutions/best-practices/: security-and-dependency-auditing.md
src/: __init__.py  downloader.rs  lib.rs  main.rs  update_checker.rs
src/twitter_video_dl/: __init__.py  cli.py  downloader.py  update_checker.py
tests/: benchmark.py  downloader_tests.rs  test_binary.py  test_cli.py  test_downloader.py  test_update_checker.py  update_checker_tests.rs
twitter_video_dl/src/: cli.py  downloader.py
